# fastApiProject1

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-cleanup.yml  docker-image-multi.yml  docker-image.yml
alembic/: env.py
alembic/versions/: 498e07c1df29_.py  58268c4f5200_.py  b5524c74ef80_.py
app/: database.py  main.py  settings.py
app/models/: base.py  user.py
app/router/: alembic.py  web.py
app/utils/: jinja2_templates.py  loguru_logger.py  timing_decorator.py
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: index.js  index.ts
frontend/src/controllers/: page_controller.js  page_controller.ts
frontend/src/scss/: bootstrap.scss  icons.scss  styles.scss
http/: test_alembic.http  test_main.http
src/: database.py  lifespan.py  main.py  settings.py
src/adapters/: web.py
src/alembic/: env.py
src/db/: base.py  dependencies.py  engine.py  redis.py
src/db/models/: __init__.py  social_auth.py  user.py
src/dependencies/: user_social_auth_service.py
src/router/: __init__.py  alembic.py  database.py  login.py  web.py
src/utils/: commit_session_middleware.py  jinja2_templates.py  loguru_logger.py  session_middleware.py  session_route.py  timing_decorator.py  timing_middleware.py  websocket_manager.py
src/utils/oauth/: discord.py
static/: assets-manifest.json  main-3bad2a34b7d6714f72ec.css  main-3bad2a34b7d6714f72ec.js  main-7874595946e8f92d0380.css  main-7874595946e8f92d0380.js  main.js
templates/: base.html  hello.html  index.html  navbar.html
templates/auth/: login.html
