[tool.poetry]
name = "fastapiproject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version= "^0.100", allow-prereleases= false}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
types-redis = "^4.6"
rich = "^13.3"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.9"
orjson = "^3.8.8"
pydantic =  {version= "^2.0", allow-prereleases= false}
redis = {version= "^4.6.0", extras = ["hiredis"]}
alembic = "^1.11.1"
greenlet = "^2.0.2"
psycopg2-binary = "^2.9.6"
jinja2 = "^3.1.2"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
