[tool.poetry]
name = "fastapiproject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version= "^0.100", allow-prereleases= false}
uvicorn = {extras = ["standard"], version = "^0.23"}
types-redis = "^4.6"
rich = "^13.3"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.9"
orjson = "^3.8.8"
pydantic =  {extras = ["email"], version = "^2.0.3"}
redis = {version= "^4.6.0", extras = ["hiredis"]}
alembic = "^1.11.1"
greenlet = "^2.0.2"
psycopg2-binary = "^2.9.6"
jinja2 = "^3.1.2"
loguru = "^0.7.0"
pydantic-settings = "^2.0.2"
authlib = "^1.2.1"
httpx = "^0.24.1"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.7.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 140
target-version = ['py311']